# atrun

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: at-run-spec.md
lexicons/: SPEC.md  dev.atpub.manifest.json  dev.atpub.yank.json  dev.atrun.module.json  dev.atrun.yank.json
src/atrun/: __init__.py  auth.py  cli.py  lockfile.py  publish.py  run.py  verify.py  wheel.py
src/atrun/ecosystems/: __init__.py  container.py  deno.py  go.py  node.py  python.py  rust.py
src/atrun/purl/: __init__.py  _compat.py  _resolve.py  _unify.py
tests/: conftest.py  test_auth.py  test_cli.py  test_ecosystems_container.py  test_ecosystems_go.py  test_ecosystems_init.py  test_ecosystems_node.py  test_ecosystems_python.py  test_ecosystems_rust.py  test_publish.py  test_purl.py  test_run.py  test_verify.py
