[project]
name = "atrun"
version = "0.3.0"
description = "Social package distribution on AT Protocol"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
atrun = "atrun.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
